# SenseCAP-Firmware

./: README.md
directory-that-makes-compiling-function/mainapp/: sdkconfig
mainapp/: partitions.csv  sdkconfig  sdkconfig.old
mainapp/main/: CMakeLists.txt  idf_component.yml  main.c
mainapp/main/app/: .placeholder
